# my-wispr

./: .gitignore  README.md  core.py  global_echopulse.py  main.py  pyproject.toml  transcribe.py
