[project]
name = "dictate"
version = "0.1.0"
description = "Local hold-to-record speech-to-text for Apple Silicon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=1.5.0",
    "mlx-whisper>=0.4.3",
    "numpy>=2.0.2",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    # AppKit/NSPasteboard bindings are provided via Cocoa
    "pyobjc-framework-Cocoa>=11.0; sys_platform == 'darwin'",
    "scipy>=1.13.1",
    "sounddevice>=0.5.5",
]

[project.scripts]
dictate = "main:main"
